# fdb

./: .clang-format  .clang-tidy  .git-blame-ignore-revs  .gitignore  .readthedocs.yaml  AUTHORS  CMakeLists.txt  CONTRIBUTORS  FDB-TOOLS.md  INSTALL  MARS.md  NOTICE  README.md  README.rst  VERSION  VERSION.cmake  WipeIterator.cc  debug-fdb.sh  fdb-write-test-db.sh  fdb_test_env.sh  foo  pyproject.toml  pytest.toml  requirements-findlib.txt  requirements.txt  run-clang-tidy  test.grib
docs/: CMakeLists.txt  Doxyfile  Doxyfile.in  README.rst  build_docs.sh  conf.py  config-schema.rst  cpp_api.rst  index.rst  requirements.in  requirements.txt  tools.rst  version_gen.py
docs/DebugTools/: dump-index.rst  dump-toc.rst  dump.rst  hammer.rst  patch.rst
docs/GeneralPurposeTools/: fdb-stats.rst  fdb.rst  grib2fdb.rst  info.rst  purge.rst  schema.rst  where.rst  wipe.rst
docs/SpecialPurposeTools/: hide.rst  move.rst  overlay.rst  root.rst
docs/_static/: data-1.csv  data-1.odb  data-2.odb  data-3.odb
docs/cli_tools/: read.rst  tools.rst
docs/content/: api.rst  architectural-introduction.rst  build-and-installation.rst  config-schema.rst  configuration.rst  installation.rst  introduction.rst  mars.rst  operational-introduction.rst  reference.rst  requirements.rst  schema.rst  technical-introduction.rst  tools.rst  usage-examples.rst
docs/content/DebugTools/: dump-index.rst  dump-toc.rst  dump.rst  patch.rst  read.rst  reconsolidate-toc.rst
docs/content/GeneralPurposeTools/: fdb-stats.rst  fdb.rst  grib2fdb.rst  info.rst  purge.rst  schema.rst  where.rst  wipe.rst
docs/content/SpecialPurposeTools/: hide.rst  move.rst  overlay.rst  root.rst
docs/content/UsageExamples/: check-installation.rst  data-retrieval.rst  mars-data-retrieval.rst
docs/content/architecture/: introduction.rst  overview.rst
docs/content/concept/: administrative-docs.rst  client-reference.rst  data-governance.rst  fdb-tools.rst  introduction.rst  tools.rst
docs/content/operational/: DebugTools.rst  GeneralPurposeTools.rst  SpecialPurposeTools.rst  tools.rst
docs/content/technical/: api.rst  build-and-installation.rst  check-installation.rst  config-schema.rst  config.rst  configuration.rst  example-schema  implementation.rst  introduction.rst  requirements.rst  schema.rst  tools.rst
docs/fdb/: CMakeLists.txt  README.rst  build_docs.sh  c_api.rst  conf.py  index.rst
docs/fdb/_static/: example-table.csv  example.odb
docs/fdb/cli_tools/: compare.rst  dump-index.rst  dump-toc.rst  dump.rst  fdb-stats.rst  fdb.rst  grib2fdb.rst  hammer.rst  index.rst  info.rst  list.rst  move.rst  overlay.rst  patch.rst  read.rst  wipe.rst  write.rst
docs/fdb/content/: DebugTools.rst  GeneralPurposeTools.rst  SpecialPurposeTools.rst  api.rst  config-schema.rst  environment-variables.rst  index.rst  installation.rst  introduction.rst  license.rst  mars.rst  requirements.rst  tools.rst
docs/pyfdb/: CMakeLists.txt  api.rst  build_docs.sh  conf.py  conftest.py  development.rst  examples.rst  index.rst  installation.rst  requirements.txt
docs/source/: conf.py  index.rst
docs/z3fdb/: CMakeLists.txt  api.rst  architecture.rst  build_docs.sh  conf.py  dimension_mapping.rst  index.rst
rust/: Cargo.toml
rust/crates/fdb/: Cargo.toml  README.md  build.rs
rust/crates/fdb-sys/: Cargo.toml  README.md  build.rs
rust/tools/fdb-hammer/: Cargo.toml  README.md
src/: CMakeLists.txt  README.rst
src/chunked_data_view/: Axis.cc  Axis.h  Buffer.cc  Buffer.h  CMakeLists.txt  ChunkedDataViewBuilder.cc  ChunkedDataViewImpl.cc  ChunkedDataViewImpl.h  Extractor.cc  Fdb.cc  GribExtractor.cc  GribExtractor.h  IndexMapper.cc  IndexMapper.h  LibChunkedDataView.cc  ListIterator.cc  NDCoord.cc  RequestManipulation.cc  RequestManipulation.h  ViewPart.cc  ViewPart.h  chunked_data_view.cc  chunked_data_view_version.h.in
src/chunked_data_view/include/: IndexMapper.h  README.md
src/chunked_data_view_bindings/: CMakeLists.txt  bindings.cc
src/dummy_daos/: CMakeLists.txt  daos.cc  daos.h  dummy_daos.cc  dummy_daos.h
src/dummy_daos/daos/: tests_lib.cc  tests_lib.h
src/fdb5/: AbbreviationHandler.cc  AbbreviationHandler.h  AdoptVisitor.cc  AdoptVisitor.h  ArchiveVisitor.cc  ArchiveVisitor.h  Archiver.cc  Archiver.h  BTreeIndex.cc  BTreeIndex.h  BaseArchiveVisitor.cc  BaseArchiveVisitor.h  CMakeLists.txt  ClimateDailyHandler.cc  ClimateDailyHandler.h  ClimateHandler.cc  ClimateHandler.h  ClimateMonthlyHandler.cc  ClimateMonthlyHandler.h  DB.cc  DB.h  DateHandler.cc  DateHandler.h  DateOrMonthHandler.cc  DateOrMonthHandler.h  DefaultKeywordHandler.cc  DefaultKeywordHandler.h  DoubleHandler.cc  DoubleHandler.h  Error.cc  Error.h  FDBFileHandle.cc  FDBFileHandle.h  FDBTool.cc  FDBTool.h  FdbTask.cc  FdbTask.h  FileStore.cc  FileStore.h  ForwardOp.cc  (+174 more)
src/fdb5/api/: DistFDB.cc  DistFDB.h  FDB.cc  FDB.h  FDBAggregateListObjects.cc  (+22 more)
src/pychunked_data_view/: CMakeLists.txt  __init__.py  chunked_data_view.py  exceptions.py  pyproject.toml  recipe_mapper.py
src/pyfdb/: README.md  __init__.py  pyfdb.py  pyfdb_iterator.py  pyfdb_type.py  pyproject.toml  requirements.txt  setup.py
src/pyfdb_bindings/: CMakeLists.txt  bindings.cc
src/z3fdb/: __init__.py  datasource.py  error.py  mapping.py  request.py  simple_store_builder.py  z3fdb.py  z3fdb_error.py  zarr.py  zarr_v3_store.py
tests/: CMakeLists.txt  conftest.py  fdb_remote_cleanup.sh.in
tests/chunked_data_view/: CMakeLists.txt  test_axis.cc  test_builder.cc  test_index_mapper.cc  test_view.cc
tests/data/: schema
tests/fdb/: CMakeLists.txt  test_fdb5_LegacyArchiver.cc  test_fdb5_service.cc  test_service.cc
tests/fdb_e2e/: CMakeLists.txt  conftest.py
tests/pychunked_data_view/: CMakeLists.txt  test_chunked_data_view.py
tests/pyfdb/: CMakeLists.txt  conftest.py
tests/regressions/: CMakeLists.txt
tests/z3fdb/: CMakeLists.txt  test_store_v3.py  test_store_v3_errors.py  test_store_v3_parts.py  test_store_v3_pattern.py  test_store_v3_random_axis.py
tools/z3fdb-web-service/: README.rst  pyproject.toml  requirements.txt  z3fdb-web-service  z3fdb-web-service-example-client
(+1480 files in other folders)
